Tue Dec 18 21:12:45 2007 Jon Kinsey <Jon_Kinsey@hotmail.com>
	* Code changes so -ansi -pedantic (just about) works for gcc on windows.

Tue Dec 18 14:14:10 CET 2007 Christian Anthon <anthon@kiku.dk>

	* set.c, board3d/drawboard3d.c, board3d/fun3d.h, board3d/inc3d.h,
	board3d/matrix.c, board3d/matrix.h, board3d/misc3d.c,
	board3d/misc3d.h, board3d/shadow.c, board3d/widget3d.c: let new
	board3d code compile under linux.

Tue Dec 18 14:10:55 CET 2007 Christian Anthon <anthon@kiku.dk>

	* bearoffdump.c, makebearoff.c, makehyper.c, record.c: make utily
	programs compile with threads enabled

Mon Dec 17 16:33:01 CET 2007 Christian Anthon <anthon@kiku.dk>

	* lib/cache.c: Fix multithreaded hang when runing quad core with four
	threads. WaitForManualEvent appears to be broken, at least on glib
	threads

Mon Dec 17 15:06:44 CET 2007 Christian Anthon <anthon@kiku.dk>

	* Makefile.am, dice.c, dice.h, eval.c, format.c, gnubg.c, gtkgame.c,
	gtkgame.h: move things around a bit so that utility programs compile
	without ugly fixes (only without threads for now)

Mon Dec 17 15:04:42 CET 2007 Christian Anthon <anthon@kiku.dk>

	* sgf.c, gtkgame.c, show.c: use %lu instead of casting to uint.

Mon Dec 17 14:59:20 CET 2007 Christian Anthon <anthon@kiku.dk>

	* sounds/Makefile.am, configure.in: we haven't beeen able to recompile
	the sounds for a long time, so let's stop trying.

Sat Dec 15 21:27:19 CET 2007 Christian Anthon <anthon@kiku.dk>

	* Renamed sgf.y to sgf_y.y and sgf.l sgf_l.l to avoid conflicts with
	sgf.c
	* bearoff.c, eval.c, format.c, gnubg.c, gtkgame.c, gtkrolls.c,
	makebearoff.c, multithread.c, play.c, relational.c, rollout.c, sgf.c,
	show.c: minor compiler warnings

Sat Dec 15 21:23:49 CET 2007 Christian Anthon <anthon@kiku.dk>

	* board3d/gtkcolour3d.c: remove unneeded gdk_gl_drawable_begin calls since
	they causes assertions on newer X window.

Thu Dec 13 22:39:56 CET 2007 Christian Anthon <anthon@kiku.dk>
