@@ -18,7 +18,7 @@
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 *
-* $Id: drawboard3d.c,v 1.59 2007/12/18 21:48:06 Superfly_Jon Exp $
+* $Id: drawboard3d.c,v 1.60 2007/12/19 09:34:24 c_anthon Exp $
 */
 
 #include "config.h"
@@ -3697,7 +3697,7 @@ void RestrictiveDrawFlag(const BoardData* bd)
 	RestrictiveDrawFrame(v, FLAG_WIDTH, FLAGPOLE_HEIGHT, FLAG_WIDTH);
 }
 
-static void drawBoardBase(const BoardData *bd, const BoardData3d *bd3d, const renderdata *prd)
+static void drawBoardBase(const BoardData *bd, BoardData3d *bd3d, const renderdata *prd)
 {
 	drawTable(bd3d, prd);
 
@@ -3742,7 +3742,7 @@ void drawBoard(const BoardData *bd, BoardData3d *bd3d, const renderdata *prd)
 }
 
 extern int renderingBase;
-extern void drawBasePreRender(const BoardData *bd, const BoardData3d *bd3d, const renderdata *prd)
+extern void drawBasePreRender(const BoardData *bd, BoardData3d *bd3d, const renderdata *prd)
 {
 	if (bd->rd->showShadows)
 	{
